--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	  <p>Series</p>
 	</div>
 	<div id="contenu" class="colonneDroite">
+	  <div id="nom" class="nom">
+	  </div>
 	  <p>Episodes</p>
 	</div>
 	
