--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 	  <p>Series</p>
 	</div>
 	<div id="contenu" class="colonneDroite">
-	  <div id="nom" class="nom">
-	  </div>
-	  <p>Episodes</p>
+	  <p>Details</p>
+	  <div id="nom" class="nom"></div>
+	  <div id="date_maj_web" class="date_maj_web"></div>
+	  <div id="repertoire" class="repertoire"></div>	  
+	  <div id="Stat_Image_Base64" class="Stat_Image_Base64"></div><div id="Stat_Tableau" class="Stat_Tableau"></div>
+	  <div id="listepisodes" class="listepisodes"></div>
 	</div>
 	
 	<script src="js/scripts.js"></script>
