--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <h1>liste des Series</h1>
 
 	<div id="menu" class="colonneGauche" >
-	  <p>Series</p>
+	  <h2>Series</h2>
+	  <ul id="menulist" class="menulist"  ></ul>
 	</div>
 	<div id="contenu" class="colonneDroite">
-	  <p>Details</p>
+	  <h2>Details</h2>
 	  <div id="nom" class="nom"></div>
 	  <div id="date_maj_web" class="date_maj_web"></div>
 	  <div id="repertoire" class="repertoire"></div>	  
-	  <div id="Stat_Image_Base64" class="Stat_Image_Base64"></div><div id="Stat_Tableau" class="Stat_Tableau"></div>
+	  <div id="Stat_Image_Base64" class="Stat_Image_Base64"></div>
+	  <div id="Stat_Tableau" class="Stat_Tableau"></div>
 	  <div id="listepisodes" class="listepisodes"></div>
 	</div>
 	
