--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <h1>liste des Series</h1>
 
+	<div id="bandeauhaut" class="bandeau" >
+	</div>
 	<div id="menu" class="colonneGauche" >
 	  <h2>Series</h2>
 	  <ul id="menulist" class="menulist"  ></ul>
