--- a/index.html
+++ b/index.html
@@ -1,42 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<!--[if lt IE 9]>
+<head>
+<!--[if lt IE 9]>
 	<script
 	  src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
-	<title>Web Interface GestionnaireDownload</title>
-	<h1>liste des Series</h1>
+<link href="css/styles.css" rel="stylesheet">
+<title>Web Interface GestionnaireDownload</title>
+<h1>liste des Series</h1>
 
-  </head>
-  <body>
+</head>
+<body>
 	<nav>
-	  <ul id="bandeauhaut" class="bandeau" >
-	  </ul>
+		<ul id="bandeauhaut" class="bandeau">
+			<li class="elementsbandeau"></li>
+		</ul>
 	</nav>
-    <nav id="menu" class="colonneGauche" >
-	  <h2>Series</h2>
-	  <ul id="menulist" class="menulist"  ></ul>
+	<nav id="menu" class="colonneGauche">
+		<h2>Series</h2>
+		<ul id="menulist" class="menulist">
+			<li class="elementsmenulist"></li>
+		</ul>
 	</nav>
 	<section id="contenu" class="colonneDroite">
-	  <h2>
-		<div id="nom" class="nom"></div>
-	  </h2>
-	  <aside>
-		<div id="Stat_Image_Base64" class="Stat_Image_Base64"></div>
-	  </aside>
-	  <article> 
-		<div id="date_maj_web" class="date_maj_web"></div>
-	    <div id="repertoire" class="repertoire"></div>	  
-		<div id="Stat_Tableau" class="Stat_Tableau"></div>
-	  </article>
+		<h2>
+			<div id="nom" class="nom"></div>
+		</h2>
+		<aside>
+			<div id="Stat_Image_Base64" class="Stat_Image_Base64"></div>
+		</aside>
+		<article>
+			<div id="date_maj_web" class="date_maj_web"></div>
+			<div id="repertoire" class="repertoire"></div>
+			<div id="Stat_Tableau" class="Stat_Tableau"></div>
+		</article>
 	</section>
 	<section id="listepisodes" class="listepisodes">
+		<ul id="listepisodesserie" class="listepisodesserie">
+			<li class="rownsaison">
+				<h4></h4>
+				<ul class="rowepisode">
+					<h5></h5>
+					<ul class="elementsEp">
+						<li class="elementEpserie"></li>
+						<li class="elementEpnum_saison"></li>
+						<li class="elementEpnum_episodes"></li>
+						<li class="elementEpsequentiel"></li>
+						<li class="elementEpnom"></li>
+						<li class="elementEpairdate"></li>
+						<li class="elementEpencours"></li>
+						<li class="elementEptimestamp_completer"></li>
+					</ul>
+				</ul>
+			</li>
+		</ul>
 	</section>
 
 	<script src="js/scripts.js"></script>
-  </body>
-  <footer>
-  </footer>
-</html>		
+</body>
+<footer> </footer>
+</html>
