--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<li class="elementsmenulist"></li>
 		</ul>
 	</nav>
-	<section id="contenu" class="colonneDroite">
+	<section id="infoserie" class="colonneDroite">
 		<h2>
 			<div id="nom" class="nom"></div>
 		</h2>
@@ -40,17 +40,14 @@
 			<li class="rownsaison">
 				<h4></h4>
 				<ul class="rowepisode">
-					<h5></h5>
-					<ul class="elementsEp">
-						<li class="elementEpserie"></li>
-						<li class="elementEpnum_saison"></li>
-						<li class="elementEpnum_episodes"></li>
+					<div class="elementsEp">
 						<li class="elementEpsequentiel"></li>
-						<li class="elementEpnom"></li>
+						<li class="elementTitre"></li>
 						<li class="elementEpairdate"></li>
-						<li class="elementEpencours"></li>
+						<li class="elementEpnom"></li>
 						<li class="elementEptimestamp_completer"></li>
-					</ul>
+						<li class="elementEpencours"></li>
+					</div>
 				</ul>
 			</li>
 		</ul>
