--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
 			</li>
 		</ul>
 	</section>
-
+  <section id="ListeQuestion" class="colonneDroite">
+	<ul id="listeQuestionSerie" class="listeQuestionSerie">
+	  <li class="Question">
+		<h4></h4>
+		<ul class="Reponse">
+		  <div class="eleRep">
+			<li class="elementChampReponse"></li>
+		  </div>
+		</ul>
+	  </li>
+	</ul>
+  </section>
 	<script src="js/scripts.js"></script>
 </body>
 <footer> </footer>
