--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
 	  </li>
 	</ul>
   </section>
+  <section id="listhash" class="listhash">
+	<ul id="listhashserie" class="listhashserie">
+		  <div class="elementsH">
+			<li class="elementHhash"></li>
+			<li class="elementHnom"></li>
+			<li class="elementHmagnet"></li>
+			<li class="elementHtimestamp_ajout"></li>
+			<li class="elementHtimestamp_termine"></li>
+			<li class="elementEpencours"></li>
+		  </div>
+		</ul>
+  </section>
 	<script src="js/scripts.js"></script>
 </body>
 <footer> </footer>
