--- a/index.html
+++ b/index.html
@@ -16,66 +16,72 @@
 			<li class="elementsbandeau"></li>
 		</ul>
 	</nav>
-	<nav id="menu" class="colonneGauche">
-		<h2>Series</h2>
-		<ul id="menulist" class="menulist">
-			<li class="elementsmenulist"></li>
-		</ul>
-	</nav>
-	<section id="infoserie" class="colonneDroite">
-		<h2>
-			<div id="nom" class="nom"></div>
-		</h2>
-		<aside>
-			<div id="Stat_Image_Base64" class="Stat_Image_Base64"></div>
-		</aside>
-		<article>
-			<div id="date_maj_web" class="date_maj_web"></div>
-			<div id="repertoire" class="repertoire"></div>
-			<div id="Stat_Tableau" class="Stat_Tableau"></div>
-		</article>
+	<section id="Series" class="Series">
+		<nav id="menu" class="colonneGauche">
+			<h2>Series</h2>
+			<ul id="menulist" class="menulist">
+				<li class="elementsmenulist"></li>
+			</ul>
+		</nav>
+		<section id="infoserie" class="colonneDroite">
+			<h2>
+				<div id="nom" class="nom"></div>
+			</h2>
+			<aside>
+				<div id="Stat_Image_Base64" class="Stat_Image_Base64"></div>
+			</aside>
+			<article>
+				<div id="date_maj_web" class="date_maj_web"></div>
+				<div id="repertoire" class="repertoire"></div>
+				<div id="Stat_Tableau" class="Stat_Tableau"></div>
+			</article>
+		</section>
+		<section id="listepisodes" class="listepisodes">
+			<ul id="listepisodesserie" class="listepisodesserie">
+				<li class="rownsaison">
+					<h4></h4>
+					<ul class="rowepisode">
+						<div class="elementsEp">
+							<li class="elementEpsequentiel"></li>
+							<li class="elementTitre"></li>
+							<li class="elementEpairdate"></li>
+							<li class="elementEpnom"></li>
+							<li class="elementEptimestamp_completer"></li>
+							<li class="elementEpencours"></li>
+						</div>
+					</ul>
+				</li>
+			</ul>
+		</section>
 	</section>
-	<section id="listepisodes" class="listepisodes">
-		<ul id="listepisodesserie" class="listepisodesserie">
-			<li class="rownsaison">
-				<h4></h4>
-				<ul class="rowepisode">
-					<div class="elementsEp">
-						<li class="elementEpsequentiel"></li>
-						<li class="elementTitre"></li>
-						<li class="elementEpairdate"></li>
-						<li class="elementEpnom"></li>
-						<li class="elementEptimestamp_completer"></li>
-						<li class="elementEpencours"></li>
-					</div>
-				</ul>
-			</li>
-		</ul>
+	<section id="Questions" class="Questions">
+		<section id="ListeQuestion" class="colonneDroite">
+			<ul id="listeQuestionSerie" class="listeQuestionSerie">
+				<li class="Question">
+					<h4></h4>
+					<ul class="Reponse">
+						<div class="eleRep">
+							<li class="elementChampReponse"></li>
+						</div>
+					</ul>
+				</li>
+			</ul>
+		</section>
 	</section>
-  <section id="ListeQuestion" class="colonneDroite">
-	<ul id="listeQuestionSerie" class="listeQuestionSerie">
-	  <li class="Question">
-		<h4></h4>
-		<ul class="Reponse">
-		  <div class="eleRep">
-			<li class="elementChampReponse"></li>
-		  </div>
-		</ul>
-	  </li>
-	</ul>
-  </section>
-  <section id="listhash" class="listhash">
-	<ul id="listhashserie" class="listhashserie">
-		  <div class="elementsH">
-			<li class="elementHhash"></li>
-			<li class="elementHnom"></li>
-			<li class="elementHmagnet"></li>
-			<li class="elementHtimestamp_ajout"></li>
-			<li class="elementHtimestamp_termine"></li>
-			<li class="elementEpencours"></li>
-		  </div>
-		</ul>
-  </section>
+	<section id="Hash" class="Hash">
+		<section id="listhash" class="listhash">
+			<ul id="listhashserie" class="listhashserie">
+				<div class="elementsH">
+					<li class="elementHhash"></li>
+					<li class="elementHnom"></li>
+					<li class="elementHmagnet"></li>
+					<li class="elementHtimestamp_ajout"></li>
+					<li class="elementHtimestamp_termine"></li>
+					<li class="elementEpencours"></li>
+				</div>
+			</ul>
+		</section>
+	</section>
 	<script src="js/scripts.js"></script>
 </body>
 <footer> </footer>
